<resources>
    <string name="app_name">Panik Button</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_about">About</string>
    <string name="about_text">Information about this application</string>
    <string name="settings_text">Settings screen</string>
    <string name="input_name">Name</string>
    <string name="input_phone">Phone</string>
    <string name="input_email">Email</string>
    <string name="edit_text">Edit</string>
    <string name="save_text">Save</string>
    <string name="back_text">Back</string>
    <string name="preference_file_key">com.example.panikbutton_PREFERENCE_FILE_KEY</string>

    <string name="user_name">User name not provided.</string>
    <string name="user_phone">__________</string>
    <string name="user_email">User email not provided.</string>
    <string name="current_user_id">currentUserId</string>
    <string name="current_user_name">currentUserName</string>
    <string name="current_phone_name">currentPhoneName</string>
    <string name="current_email_name">currentEmailName</string>
    <string name="userName">userName</string>
    <string name="phoneName">phoneName</string>
    <string name="emailName">emailName</string>
    <string name="updated_name">Name: %s</string>
    <string name="updated_phone">Phone: %s</string>
    <string name="updated_email">Email: %s</string>
    <string name="required">&lt;required&gt;</string>

    <string name="add_contact">Add Contact</string>
    <string name="hint_name">Enter name</string>
    <string name="hint_phone">Enter phone</string>
    <string name="hint_email">Enter email</string>
    <string name="update_name">Update name</string>
    <string name="update_phone">Update phone</string>
    <string name="update_email">Update email</string>
    <string name="saved">Saved successfully!</string>
    <string name="done">Done</string>
    <string name="num_contacts"> contacts added</string>
    <string name="add">Add</string>
    <string name="add_contact_title">Add Contact</string>
    <string name="new_contact">New Contact</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="delete">Delete</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="new_profile">New Profile</string>
    <string name="set_primary_contact">Set Primary Contact</string>
    <string name="primary_contact_title">Primary Contact</string>
    <string name="primary_contact_number">None</string>
    <string name="primary_contact_name">None</string>
    <string name="primary_contact_email">None</string>
    <string name="call_failed">Call failed</string>
    <string name="call_success">Call success </string>

    <string name="default_text_message">%1$s needs emergency assistance. Coordinates at %2$s. Please contact the local authorities for help as soon as possible.</string>
    <string name="coordinates">lat: %1$f; long: %2$f</string>
    <string name="default_email_subject">%1$s needs emergency assistance</string>
    <string name="invalid_phone_number">Phone number is invalid for %1$s</string>
    <string name="message_sent">Message sent to %1$s</string>
    <string name="label_send_email">send email</string>
    <string name="entered_user_info">enteredUserInfo</string>
    <string name="okay">Okay</string>
    <string name="back">Back</string>
    <string name="welcome">Welcome!</string>
    <string name="intro">Please enter your user profile details which will be used in your emergency messages.</string>
    <string name="later">Later</string>
    <string name="contactsURI"></string>

    <string name="signed_out">signed out</string>
    <string name="emailpassword_title_text">Sign In Page</string>
    <string name="hint_password">Enter password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="reload">Reload</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="label_multi_factor">Multi-Factor Authentication</string>
    <string name="enroll_mfa">Enroll MFA</string>
    <string name="unenroll_mfa">Unenroll MFA</string>

    <string name="multi_factor_signed_out">You are not signed in. To use this sample, first navigate to the Email/Password example to sign in and then return here to enroll in multi-factor auth.</string>
    <string name="background_location_title">Location Permissions Request</string>
    <string name="background_location_info">This app requests your background location permissions to get the most accurate and up-to-date GPS information about your whereabouts to remit to your contacts.</string>
    <string name="sms_permissions_title">SMS Permissions Request</string>
    <string name="sms_permissions_info">This app requests access to SMS to send notifications to your contacts about your emergency request.</string>

    <string name="tag_description">Image of Bluetooth connectivity device</string>
    <string name="not_connected">Not Connected</string>
    <string name="connected">Connected</string>
    <string name="tag_id_title">Tag ID Number:</string>
    <string name="send_alert">Send Alert: Two short clicks</string>
    <string name="cancel_alert">Cancel Alert: Long hold</string>
    <string name="instructions_title">Instructions</string>

</resources>