<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <ImageView
        android:id="@+id/tag_image"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:scaleX=".5"
        android:scaleY=".5"
        android:src="@drawable/tag_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/tag_description"/>

    <Button
        android:id="@+id/connect_button"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_weight="0.30"
        android:text="@string/not_connected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_image" />

    <TextView
        android:id="@+id/tagID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tag_id_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect_button" />

    <TextView
        android:id="@+id/instructions_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/instructions_title"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/tagID" />

    <TextView
        android:id="@+id/alert_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_alert"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/instructions_dialog" />

    <TextView
        android:id="@+id/cancel_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_alert"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/alert_info" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/settings_nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>